@@ -1,3 +1,7 @@
+2010-11-28  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
+
+	* testsuite/TestHexParserModule.cpp: add a test case for the 'even' program which consists of 3 module 
+
 2010-11-27  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
 	
 	* testsuite/TestHexParserModule.cpp: testing whether the module atom is registered
@@ -6,7 +10,7 @@
 	* include/dlvhex/ProgramCtx.h: registering module atoms
 	* include/dlvhex/Atoms.hpp: add struct ModuleAtom
 	* include/dlvhex/ModuleAtomTable.hpp: table for storing module atoms (copy paste from ExternalAtomTable with renaming)
-	* Committed in revision 2490 and 2491
+	* Committed revision 2490 and 2491
 
 	* include/dlvhex/HexGrammar.tcc: allowing empty module inputs and module output with 0 arity
 	* include/dlvhex/Atoms.hpp: fixing struct ModuleAtom
@@ -14,11 +18,12 @@
 	* src/dlvhex/ProgramCtx.cpp: fixing print output ModuleAtom
 	* src/dlvhex/HexGrammarPTToASTConverter.cpp: updating createModAtomFromModAtom
 	* testsuite/TestHexParserModule.cpp: updating test cases for module output
-	* Committed in revision 2494
+	* Committed revision 2494
 
 	* TestHexParserModule.cpp: add module header test
 	* HexGrammarPTToASTConverter.cpp: add method if module header is found (doModuleHeader)
 	* HexGrammarPTToASTConverter.h: add method if module header is found (doModuleHeader)
+	* Committed revision 2496.
 
 2010-11-26  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
 
